Add offering presentation metadata
